coreeção de bug section contato

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         </div>
     </div>
     <section class="contato">
-        <div id="contato2">
-            <a href=""><img src="imagens/logo-reactattack.png" alt="logo-rt" class="imgreact"></a>
+        <div class="contato2">
+            <a href=""><img src="imagens/logo-reactattack.png" alt="logo-rt" class="img-react"></a>
             <div class="sobrenos">
                 <p><a href="#">Guild - ReactAttack</a></p>
                 <p><a href="#">Sobre Nós</a></p>
@@ -76,10 +76,10 @@
                 <p><a href="#">Idealizadores</a></p>
             </div>
         </div>
-        <a href="https://apps.apple.com/us/app/summoners-war/id852912420" target="_blank"><img
-                src="imagens/loja-appstore.png" alt="loja-appstore" class="imgappstore"></a>
-        <a href="https://play.google.com/store/apps/details?id=com.com2us.smon.normal.freefull.google.kr.android.common&hl=pt_BR&gl=US&pli=1"
-            target="_blank"><img src="imagens/loja-googleplay.png" alt="loja-googleplay" class="imggoogleplay"></a>
+        <div class="box-apps">
+            <a href="https://apps.apple.com/us/app/summoners-war/id852912420" target="_blank"><img src="imagens/loja-appstore.png" alt="loja-appstore" class="img-appstore"></a>
+            <a href="https://play.google.com/store/apps/details?id=com.com2us.smon.normal.freefull.google.kr.android.common&hl=pt_BR&gl=US&pli=1" target="_blank"><img src="imagens/loja-googleplay.png" alt="loja-googleplay" class="img-googleplay"></a>
+        </div>
     </section>
     <footer>
         <p>Copyright 2023 @ReactAttack - Open License</p>
