--- a/guia-homunculos.html
+++ b/guia-homunculos.html
@@ -92,16 +92,16 @@
         </div>
     </div>
     <section class="contato">
-        <div class="contato2">
+        <div class="contato-logo">
             <a href=""><img src="imagens/logo-reactattack.png" alt="logo-rt" class="img-react"></a>
-            <div class="sobrenos">
-                <p><a href="#">Guild - ReactAttack</a></p>
-                <p><a href="#">Sobre Nós</a></p>
-                <p><a href="#">Contato</a></p>
-                <p><a href="#">Idealizadores</a></p>
-            </div>
         </div>
-        <div class="box-apps">
+        <div class="contato-info">
+            <p><a href="#">Guild - ReactAttack</a></p>
+            <p><a href="#">Sobre Nós</a></p>
+            <p><a href="#">Contato</a></p>
+            <p><a href="#">Idealizadores</a></p>
+        </div>
+        <div class="contato-apps">
             <a href="https://apps.apple.com/us/app/summoners-war/id852912420" target="_blank"><img src="imagens/loja-appstore.png" alt="loja-appstore" class="img-appstore"></a>
             <a href="https://play.google.com/store/apps/details?id=com.com2us.smon.normal.freefull.google.kr.android.common&hl=pt_BR&gl=US&pli=1" target="_blank"><img src="imagens/loja-googleplay.png" alt="loja-googleplay" class="img-googleplay"></a>
         </div>
