--- a/index.html
+++ b/index.html
@@ -27,6 +27,30 @@
             <nav><a href="mobs-pvp.html">Mobs PVP</a></nav>
             <nav><a href="runas.html">Runas</a></nav>
         </menu>
+        <menu class="menu-grande">
+            <div class="mg-coluna">
+                <p class="botao-home"><a href="">HOME</a></p>
+                <div class="mg-coluna2">
+                    <div class="mg-itens">
+                        <nav><a href="#">Guia do Iniciante</a></nav>
+                        <nav><a href="#">Tricaru</a></nav>
+                        <nav><a href="#">Homunculo</a></nav>
+                        <nav><a href="#">Runas</a></nav>
+                        <nav><a href="#">Mobs PVE</a></nav>
+                        <nav><a href="#">Mobs PVP</a></nav>
+                    </div>
+                    <div class="mg-itens">
+                        <nav><a href="#">Siege</a></nav>
+                        <nav><a href="#">Arena</a></nav>
+                        <nav><a href="#">Raid Solo</a></nav>
+                        <nav><a href="#">Raid 5 & BJ5</a></nav>
+                        <nav><a href="#">TOA Hard</a></nav>
+                        <nav><a href="#">TOA Normal</a></nav>
+
+                    </div>
+                </div>
+            </div>    
+        </menu>
     </header>
     <div class="big-box">
         <main class="box-main">
@@ -61,7 +85,7 @@
             </div>
             <div class="cases">
                 <div class="case-menu">
-                    <p>guias</p>
+                    <h4>Guias</h4>
                 </div>
             </div>
         </div>
